[project]
name = "trysoma_insurance_claim_bot_example"
version = "0.0.0"
description = "Example insurance claim bot agent using Soma Python SDK"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "trysoma_sdk",
    "trysoma_api_client",
    "pydantic>=2.0",
    "openai>=1.0",
    "httpx>=0.27.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8",
    "ruff>=0.3.0",
]

# Use hatchling but skip building - this is an example project, not a distributable package
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include agents and functions as the "package" directories
packages = ["agents", "functions"]

[project.scripts]
dev = "trysoma_sdk.standalone:watch_and_regenerate"

[tool.ruff]
line-length = 88
target-version = "py310"


[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "../../packages/api_client"


[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_openai.*"
ignore_missing_imports = true

[tool.uv.sources]
trysoma_sdk = { workspace = true }
trysoma_api_client = { workspace = true }
