[project]
name = "soma-insurance-claim-bot-example"
version = "0.1.0"
description = "Example insurance claim bot agent using Soma Python SDK"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "soma-sdk",
    "soma-api-client",
    "pydantic>=2.0",
    "openai>=1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8",
    "ruff>=0.3.0",
]

# Use hatchling but skip building - this is an example project, not a distributable package
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include agents and functions as the "package" directories
packages = ["agents", "functions"]

[project.scripts]
dev = "soma_sdk.standalone:watch_and_regenerate"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.uv.sources]
soma-sdk = { workspace = true }
soma-api-client = { workspace = true }
